# zkemv

./: .gitignore  Cargo.toml  README.md
contract/: Cargo.toml
contract/src/: lib.rs
host/: Cargo.toml
host/src/: ca_keys.rs  main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
