[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
borsh = { version = "1.5.7" }
rsa = { version = "0.9.8", features = ["hazmat"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
hex = "0.4.3"
