[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
borsh = { version = "1.5.7" }
rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.7-risczero.0", features = ["hazmat"] }
sha1 = "0.10.6"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
hex = "0.4.3"
