[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true }
client-sdk = { workspace = true, features = ["rest", "risc0"] }
contract = { path = "../contract", package = "contract" }

methods = { path = "../methods" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.23", features = ["derive"] }
borsh = "1.5.7"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
anyhow = "1.0.98"
pcsc = "2"
hex = "0.4.3"
apdu = "0.4.0"
tlv_parser = { git = "https://github.com/mrnerdhair/tlv-parser", rev = "b429e205b0d710b0c470773b2c6094b4e328904d" }
rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.7-risczero.0", features = ["hazmat"] }
sha1 = "0.10.6"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
