[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
sdk = { git = "https://github.com/hyli-org/hyli", package = "hyle-contract-sdk", features = [
  "risc0",
], tag = "v0.13.2" }
contract = { path = "../../contract", package = "contract" }

risc0-zkvm = { version = "2.1.0", default-features = false, features = ['std'] }
